--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <input type="text" id="input" placeholder="Enter numbers">
     <button id="calculateBtn">Calculate</button>
     <p id="result"></p>
+
+    <script src="src/app.js"></script>
 </body>
 </html>
